fixing spacing

--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -6,28 +6,10 @@ body{
   margin: 0;
 }
 
-.app {
-  display: flex;
-  flex-direction: column;
-}
-
-.content {
-  width: 100%; 
-  height: calc(100vh - 5em); 
-  overflow: unset; 
-  scrollbar-width: none;
-}
-
-.intro{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
 .intro-text{
   color: aliceblue;
 }
 
-.section__wrapper{
-  @include m.padding();
+.section__wrapper:not(:last-child){
+  @include m.sectionPadding();
 }
