--- a/portfolio/src/styles/_mixins.scss
+++ b/portfolio/src/styles/_mixins.scss
@@ -5,10 +5,11 @@
 }
 
 $breakpoints: (
-  sm: 640px,
-  md: 768px,
-  lg: 1024px,
-  xl: 1280px
+    xs: 400px,
+    sm: 640px,
+    md: 768px,
+    lg: 1024px,
+    xl: 1280px
 );
 
 
@@ -30,9 +31,15 @@ $breakpoints: (
     padding-bottom: 6px;
 }
 
-@mixin padding {
+@mixin sectionPadding {
+    @media (min-width: map-get($breakpoints, xs)){
+        padding: 16px;
+        margin: 0 2em;
+    }
     @media (min-width: map-get($breakpoints, sm)){
         padding: 16px;
+        margin: 0 2em;
     }
     padding: 6px;
+    margin: 0 5em;
 }
