--- a/portfolio/src/styles/about.scss
+++ b/portfolio/src/styles/about.scss
@@ -6,8 +6,6 @@
     gap: 5em;
     place-items: center;
 
-    margin: 0 2em 0 2em;
-
     height: 100vh;
 
     @include m.textStyle();
